starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__struct_definition_commas.snap
---
source: starstream-compiler/src/formatter.rs
assertion_line: 703
description: "Code:\n\nstruct Point {\n    x:   i64,\n    y: i64\n}\n"
---
struct Point {
    x: i64,
    y: i64,
}
