starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__utxo_definition.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nutxo PayToPublicKey {\n    storage {\n        let mut _recipient: PublicKey;\n    }\n    main fn start(recipient: PublicKey) {\n        _recipient = recipient;\n        yield(IPayToPublicKey);\n    }\n    impl IPayToPublicKey {\n        fn consume() {\n            resume;\n        }\n    }\n}\n"
---
utxo PayToPublicKey {
    storage {
        let mut _recipient: PublicKey;
    }

    main fn start(recipient: PublicKey) {
        _recipient = recipient;
        yield(IPayToPublicKey);
    }

    impl IPayToPublicKey {
        fn consume() {
            resume;
        }
    }
}
